examples/test/testpolicy5257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5257
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key1: value8
      key37: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value47
          key3: value0
      podSelector:
        matchLabels:
          key17: value38
          key31: value26
